force-app/main/default/objects/SAP_Sales_Actual__c/SAP_Sales_Actual__c.object-meta.xml
<CustomObject>
    <label>SAP Sales Actual</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>SAP Sales Actual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Sales Actual</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>