force-app/main/default/objects/SAP_Sales_Actual__c/fields/Back_Order_Amount_BC__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Amount_BC__c</fullName>
    <label>Back Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>