force-app/main/default/objects/SAP_Sales_Actual__c/fields/Back_Order_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Amount_USD__c</fullName>
    <label>Back Order Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>