force-app/main/default/objects/SAP_Sales_Actual__c/fields/Back_Order_without_SO__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_without_SO__c</fullName>
    <formula>IF(ISBLANK(SO_No__c), Back_Order_Qty__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back Order without SO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>