force-app/main/default/objects/SAP_Sales_Actual__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>