force-app/main/default/objects/SAP_Sales_Actual__c/fields/Cost_BC__c.field-meta.xml
<CustomField>
    <fullName>Cost_BC__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>