force-app/main/default/objects/SAP_Sales_Actual__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>