force-app/main/default/objects/SAP_Sales_Actual__c/fields/Customer_Group2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group2__c</fullName>
    <label>Customer Group2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>