force-app/main/default/objects/SAP_Sales_Actual__c/fields/Customer_Group2_Desc__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group2_Desc__c</fullName>
    <label>Customer Group2 Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>