force-app/main/default/objects/SAP_Sales_Actual__c/fields/Customer_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Model</label>
    <referenceTo>Customer_Model_Product__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>