force-app/main/default/objects/SAP_Sales_Actual__c/fields/Customer_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Product Line</label>
    <referenceTo>Customer_Product_Line__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>