force-app/main/default/objects/SAP_Sales_Actual__c/fields/Customer_SAP_Code_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Customer_SAP_Code_From_SAP__c</fullName>
    <label>Customer SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>