force-app/main/default/objects/SAP_Sales_Actual__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>2</length>
    <type>Text</type>
</CustomField>