force-app/main/default/objects/SAP_Sales_Actual__c/fields/Delivery_Order_Difference__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order_Difference__c</fullName>
    <label>Delivery Order Difference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>