force-app/main/default/objects/SAP_Sales_Actual__c/fields/Delivery_Order_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order_Posting_Date__c</fullName>
    <label>Delivery Order Posting Date</label>
    <type>Date</type>
</CustomField>