force-app/main/default/objects/SAP_Sales_Actual__c/fields/Desired_Ship_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Ship_On_Date__c</fullName>
    <label>Desired Ship On Date</label>
    <type>DateTime</type>
</CustomField>