force-app/main/default/objects/SAP_Sales_Actual__c/fields/DN_Create_ON__c.field-meta.xml
<CustomField>
    <fullName>DN_Create_ON__c</fullName>
    <label>DN Create ON(old)</label>
    <type>DateTime</type>
</CustomField>