force-app/main/default/objects/SAP_Sales_Actual__c/fields/DN_No_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>DN_No_From_SAP__c</fullName>
    <label>Delivery No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>