force-app/main/default/objects/SAP_Sales_Actual__c/fields/DN_Qty__c.field-meta.xml
<CustomField>
    <fullName>DN_Qty__c</fullName>
    <label>DN Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>