force-app/main/default/objects/SAP_Sales_Actual__c/fields/DNNo__c.field-meta.xml
<CustomField>
    <fullName>DNNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DN No</label>
    <referenceTo>Delivery_Order__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>