force-app/main/default/objects/SAP_Sales_Actual__c/fields/Estimated_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Invoice_Date__c</fullName>
    <formula>CASE(Shippingcondition__c, 
&apos;ZSD005&apos;, Desired_Ship_On_Date__c,
&apos;ZSD028&apos;, Loading_Date__c,
&apos;Z1&apos;, Required_Delivery_Date__c,
&apos;02&apos;, Required_Delivery_Date__c,
NULL)</formula>
    <label>Estimated Invoice Date</label>
    <type>DateTime</type>
</CustomField>