force-app/main/default/objects/SAP_Sales_Actual__c/fields/Export_Model__c.field-meta.xml
<CustomField>
    <fullName>Export_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Export Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>SAP Sales Actual (Export Model)</relationshipLabel>
    <relationshipName>SAP_Sales_Actual1</relationshipName>
    <type>Lookup</type>
</CustomField>