force-app/main/default/objects/SAP_Sales_Actual__c/fields/Export_Model_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Export_Model_From_SAP__c</fullName>
    <label>Export Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>