force-app/main/default/objects/SAP_Sales_Actual__c/fields/Factory_Model__c.field-meta.xml
<CustomField>
    <fullName>Factory_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>