force-app/main/default/objects/SAP_Sales_Actual__c/fields/Factory_Model_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Factory_Model_From_SAP__c</fullName>
    <label>Factory Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>