force-app/main/default/objects/SAP_Sales_Actual__c/fields/Goods_Movement_Status__c.field-meta.xml
<CustomField>
    <fullName>Goods_Movement_Status__c</fullName>
    <label>Goods Movement Status Backend Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>