force-app/main/default/objects/SAP_Sales_Actual__c/fields/Goods_Movement_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Goods_Movement_Status_Description__c</fullName>
    <formula>IF(	Goods_Movement_Status__c  == &apos;A&apos;, &apos;Not Processed&apos;,
IF(	Goods_Movement_Status__c  == &apos;C&apos;, &apos;Processed&apos;,
&apos;Not Relevant&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goods Movement Status</label>
    <type>Text</type>
</CustomField>