force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date(old)</label>
    <type>DateTime</type>
</CustomField>