force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_Net_Income_BC__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net_Income_BC__c</fullName>
    <label>Invoice Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>