force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_Net_Income_USD__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net_Income_USD__c</fullName>
    <label>Invoice Net Income(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>