force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_New_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_New_Date__c</fullName>
    <formula>DATETIMEVALUE( Invoice_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>