force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice No</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>