force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_No_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No_From_SAP__c</fullName>
    <label>Invoice No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>