force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_Status1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status1__c</fullName>
    <formula>IF(	Invoice_Status__c == &apos;A&apos;, &apos;Not Processed&apos;, 
IF(	Invoice_Status__c == &apos;C&apos;, &apos;Processed&apos;, 
&apos;Not Relevant&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>