force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status Backend Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>