force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoiced_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount_USD__c</fullName>
    <label>Invoiced Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>