force-app/main/default/objects/SAP_Sales_Actual__c/fields/Invoiced_Qty__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Qty__c</fullName>
    <label>Invoiced Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>