force-app/main/default/objects/SAP_Sales_Actual__c/fields/Latestshipoutdate__c.field-meta.xml
<CustomField>
    <fullName>Latestshipoutdate__c</fullName>
    <label>Latestshipoutdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>