force-app/main/default/objects/SAP_Sales_Actual__c/fields/Loading_Date__c.field-meta.xml
<CustomField>
    <fullName>Loading_Date__c</fullName>
    <label>Loading Date</label>
    <type>DateTime</type>
</CustomField>