force-app/main/default/objects/SAP_Sales_Actual__c/fields/Lost_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Lost_Data_Status__c</fullName>
    <description>can`t have Order_Item_No__c</description>
    <label>Lost Data Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>