force-app/main/default/objects/SAP_Sales_Actual__c/fields/MGTCustomer_c__c.field-meta.xml
<CustomField>
    <fullName>MGTCustomer_c__c</fullName>
    <formula>Customer_Product_Line__r.Management_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Customer</label>
    <type>Text</type>
</CustomField>