force-app/main/default/objects/SAP_Sales_Actual__c/fields/Order_Category1__c.field-meta.xml
<CustomField>
    <fullName>Order_Category1__c</fullName>
    <formula>IF(	Order_Category__c == &apos;S&apos;, &apos;Sales Order&apos;, 
IF(	Order_Category__c == &apos;V&apos;, &apos;Virtual Order&apos;,
&apos;Purchase Order&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Category</label>
    <type>Text</type>
</CustomField>