force-app/main/default/objects/SAP_Sales_Actual__c/fields/Order_Category__c.field-meta.xml
<CustomField>
    <fullName>Order_Category__c</fullName>
    <label>Order Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>