force-app/main/default/objects/SAP_Sales_Actual__c/fields/Order_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_No__c</fullName>
    <label>Order Item No</label>
    <referenceTo>Order_Product__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>