force-app/main/default/objects/SAP_Sales_Actual__c/fields/Order_Item_No_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_No_From_SAP__c</fullName>
    <label>Order Item No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>