force-app/main/default/objects/SAP_Sales_Actual__c/fields/Order_Type1__c.field-meta.xml
<CustomField>
    <fullName>Order_Type1__c</fullName>
    <formula>Order_Item_No__r.Order_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>