force-app/main/default/objects/SAP_Sales_Actual__c/fields/Pending_DN_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Pending_DN_Amount_USD__c</fullName>
    <label>Pending DN Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>