force-app/main/default/objects/SAP_Sales_Actual__c/fields/Pending_DN_Net_Income_BC__c.field-meta.xml
<CustomField>
    <fullName>Pending_DN_Net_Income_BC__c</fullName>
    <label>Pending DN Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>