force-app/main/default/objects/SAP_Sales_Actual__c/fields/PickList__c.field-meta.xml
<CustomField>
    <fullName>PickList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PickList</label>
    <referenceTo>PickList__c</referenceTo>
    <relationshipLabel>SAP Sales Actual</relationshipLabel>
    <relationshipName>SAP_Sales_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>