force-app/main/default/objects/SAP_Sales_Actual__c/fields/PO_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date_Date__c</fullName>
    <label>PO Date（Date）</label>
    <type>Date</type>
</CustomField>