force-app/main/default/objects/SAP_Sales_Actual__c/fields/PO_Date_New__c.field-meta.xml
<CustomField>
    <fullName>PO_Date_New__c</fullName>
    <formula>DATETIMEVALUE( PO_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>