force-app/main/default/objects/SAP_Sales_Actual__c/fields/POD_date__c.field-meta.xml
<CustomField>
    <fullName>POD_date__c</fullName>
    <label>POD Date(old)</label>
    <type>DateTime</type>
</CustomField>