force-app/main/default/objects/SAP_Sales_Actual__c/fields/POD_Date_New__c.field-meta.xml
<CustomField>
    <fullName>POD_Date_New__c</fullName>
    <formula>DATETIMEVALUE( POD_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD Date</label>
    <type>Date</type>
</CustomField>