force-app/main/default/objects/SAP_Sales_Actual__c/fields/POD_Number__c.field-meta.xml
<CustomField>
    <fullName>POD_Number__c</fullName>
    <label>POD Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>