force-app/main/default/objects/SAP_Sales_Actual__c/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <label>Product Line Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>