force-app/main/default/objects/SAP_Sales_Actual__c/fields/Programname__c.field-meta.xml
<CustomField>
    <fullName>Programname__c</fullName>
    <label>Programname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>