force-app/main/default/objects/SAP_Sales_Actual__c/fields/Required_Delivery_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Delivery_Date_Date__c</fullName>
    <label>Required Delivery Date（Date）</label>
    <type>Date</type>
</CustomField>