force-app/main/default/objects/SAP_Sales_Actual__c/fields/Required_Delivery_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Required_Delivery_Date_New__c</fullName>
    <formula>DATETIMEVALUE( Required_Delivery_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Delivery Date</label>
    <type>Date</type>
</CustomField>