force-app/main/default/objects/SAP_Sales_Actual__c/fields/Sales_Orgnization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Orgnization__c</fullName>
    <label>Sales Orgnization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8000</fullName>
                <label>8000: HS Import/Export Co.</label>
            </value>
            <value>
                <fullName>8010</fullName>
                <label>8010: HS International Co.</label>
            </value>
            <value>
                <fullName>8040</fullName>
                <label>8040: HS International(HK)</label>
            </value>
            <value>
                <fullName>8050</fullName>
                <label>8050: HS International Ame</label>
            </value>
            <value>
                <fullName>8060</fullName>
                <label>8060: HS International(HK)(EU)</label>
            </value>
            <value>
                <fullName>8070</fullName>
                <label>8070: HS (QD) MEA HOLDINGS</label>
            </value>
            <value>
                <fullName>8080</fullName>
                <label>8080: HS (HK) MEA SALES</label>
            </value>
            <value>
                <fullName>8090</fullName>
                <label>8090: HS (HK) MEA MF</label>
            </value>
            <value>
                <fullName>80A0</fullName>
                <label>80A0: HS QD asia Holdings</label>
            </value>
            <value>
                <fullName>80B0</fullName>
                <label>80B0: HS Singapore Holding</label>
            </value>
            <value>
                <fullName>8110</fullName>
                <label>8110: Hisense US Sales Org</label>
            </value>
            <value>
                <fullName>8120</fullName>
                <label>8120: Hisense CA Sales Org</label>
            </value>
            <value>
                <fullName>8140</fullName>
                <label>8140: Hisense MX Sales Org</label>
            </value>
            <value>
                <fullName>8170</fullName>
                <label>8170: HS USM Sales Org</label>
            </value>
            <value>
                <fullName>8200</fullName>
                <label>8200: Hisense Australia SO</label>
            </value>
            <value>
                <fullName>8300</fullName>
                <label>8300: Hisense DE Sales Org</label>
            </value>
            <value>
                <fullName>8320</fullName>
                <label>8320: Hisense RU Sales Org</label>
            </value>
            <value>
                <fullName>8330</fullName>
                <label>8330: Hisense IT Sales Org</label>
            </value>
            <value>
                <fullName>8340</fullName>
                <label>8340: Hisense ES Sales Org</label>
            </value>
            <value>
                <fullName>8350</fullName>
                <label>8350: Hisense UK Sales Org</label>
            </value>
            <value>
                <fullName>8370</fullName>
                <label>8370: Hisense IT Sales Org</label>
            </value>
            <value>
                <fullName>8380</fullName>
                <label>8380: Hisense FR Sales Org</label>
            </value>
            <value>
                <fullName>8390</fullName>
                <label>8390: Hisense CZ Sales Org</label>
            </value>
            <value>
                <fullName>83B0</fullName>
                <label>83B0: Hisense EU R&amp;D</label>
            </value>
            <value>
                <fullName>8400</fullName>
                <label>8400: HISENSE (MALAYSIA) S</label>
            </value>
            <value>
                <fullName>8410</fullName>
                <label>8410: Hisense JP Sales Org</label>
            </value>
            <value>
                <fullName>8420</fullName>
                <label>8420: Hisense ID Sales Org</label>
            </value>
            <value>
                <fullName>8430</fullName>
                <label>8430: Hisense TH Sales Org</label>
            </value>
            <value>
                <fullName>8500</fullName>
                <label>8500: HS SA MANUFACTURING</label>
            </value>
            <value>
                <fullName>8510</fullName>
                <label>8510: HS SA SALES HOLDING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>