force-app/main/default/objects/SAP_Sales_Actual__c/fields/SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesGroup__c</fullName>
    <label>Sales Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>