force-app/main/default/objects/SAP_Sales_Actual__c/fields/Ship_Amount_BC__c.field-meta.xml
<CustomField>
    <fullName>Ship_Amount_BC__c</fullName>
    <label>Ship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>