force-app/main/default/objects/SAP_Sales_Actual__c/fields/Ship_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Ship_Amount_USD__c</fullName>
    <label>Ship Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>