force-app/main/default/objects/SAP_Sales_Actual__c/fields/Ship_Window_to__c.field-meta.xml
<CustomField>
    <fullName>Ship_Window_to__c</fullName>
    <label>Ship Window to</label>
    <type>DateTime</type>
</CustomField>