force-app/main/default/objects/SAP_Sales_Actual__c/fields/Shipto_Party_City__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Party_City__c</fullName>
    <label>Shipto Party City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>