force-app/main/default/objects/SAP_Sales_Actual__c/fields/SO_Createdon__c.field-meta.xml
<CustomField>
    <fullName>SO_Createdon__c</fullName>
    <label>SO Createdon</label>
    <type>DateTime</type>
</CustomField>