force-app/main/default/objects/SAP_Sales_Actual__c/fields/SO_Qty__c.field-meta.xml
<CustomField>
    <fullName>SO_Qty__c</fullName>
    <label>SO Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>