force-app/main/default/objects/SAP_Sales_Actual__c/fields/SO_Type__c.field-meta.xml
<CustomField>
    <fullName>SO_Type__c</fullName>
    <label>SO Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>