force-app/main/default/objects/SAP_Sales_Actual__c/fields/Stor_Location__c.field-meta.xml
<CustomField>
    <fullName>Stor_Location__c</fullName>
    <label>Stor Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>