force-app/main/default/objects/SAP_Sales_Actual__c/fields/VO_No__c.field-meta.xml
<CustomField>
    <fullName>VO_No__c</fullName>
    <label>VO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>