force-app/main/default/objects/SAP_Sales_Actual__c/fields/VO_Number__c.field-meta.xml
<CustomField>
    <fullName>VO_Number__c</fullName>
    <label>VO Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>