force-app/main/default/objects/SAP_Sales_Actual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Orgnization__c</columns>
    <columns>Customer_Product_Line__c</columns>
    <columns>Invoice_Net_Income_BC__c</columns>
    <columns>Invoice_Net_Income_USD__c</columns>
    <columns>Invoiced_Amount_BC__c</columns>
    <columns>Invoiced_Amount_USD__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Orgnization__c</field>
        <operation>equals</operation>
        <value>8110</value>
    </filters>
    <label>All</label>
</ListView>